Remove FetchTaskTest and clean up unused constructors in FileDownloadTask and GetTask