@@ -20,6 +20,7 @@ package org.jackhuang.hmcl.auth.offline;
 import com.google.gson.JsonObject;
 import com.google.gson.annotations.SerializedName;
 import javafx.scene.image.Image;
+import org.glavo.url.WebURL;
 import org.jackhuang.hmcl.auth.yggdrasil.TextureModel;
 import org.jackhuang.hmcl.download.DownloadCandidate;
 import org.jackhuang.hmcl.task.FetchTask;
@@ -122,7 +123,7 @@ public record Skin(Type type, String cslApi, TextureModel textureModel, String l
                 String realCslApi = type == Type.LITTLE_SKIN
                         ? "https://littleskin.cn/csl"
                         : NetworkUtils.addHttpsIfMissing(StringUtils.removeSuffix(Objects.requireNonNullElse(cslApi, ""), "/"));
-                return Task.composeAsync(() -> new GetTask(String.format("%s/%s.json", realCslApi, username)))
+                return Task.composeAsync(() -> new GetTask(WebURL.parse("%s/%s.json".formatted(realCslApi, username))))
                         .thenComposeAsync(json -> {
                             SkinJson result = JsonUtils.GSON.fromJson(json, SkinJson.class);
 
